[gd_scene load_steps=8 format=2]

[ext_resource path="res://Better Celestial Bodies/CelestialBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://Better Celestial Bodies/Star/StarType.gd" type="Script" id=2]
[ext_resource path="res://Better Celestial Bodies/Star/light.png" type="Texture" id=3]
[ext_resource path="res://Better Celestial Bodies/SuckArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Materials/StarColorGradient.tres" type="Gradient" id=5]

[sub_resource type="Gradient" id=1]
resource_local_to_scene = true
offsets = PoolRealArray( 0.362694, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = ExtResource( 5 )

[node name="Star" instance=ExtResource( 1 )]

[node name="Tail" parent="." index="0"]
gradient = SubResource( 1 )

[node name="CollisionArea" parent="." index="1"]
visible = true
collision_layer = 2
collision_mask = 17

[node name="Type" parent="." index="2"]
script = ExtResource( 2 )

[node name="LightSprite" type="Sprite" parent="Type" index="0"]
scale = Vector2( 0.3, 0.3 )
z_index = 2
texture = ExtResource( 3 )

[node name="Light" type="Light2D" parent="Type" index="1"]
light_mask = 0
texture = ExtResource( 3 )
texture_scale = 0.3

[node name="SuckArea" parent="Type" index="2" instance=ExtResource( 4 )]

[node name="StarColor" type="Sprite" parent="Type" index="3"]
visible = false
texture = SubResource( 2 )

[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="change_color" from="Type" to="." method="_change_color"]
[connection signal="change_mass" from="Type" to="." method="_change_mass"]
[connection signal="change_radius" from="Type" to="." method="_change_radius"]
[connection signal="change_type" from="Type" to="." method="_change_type"]
[connection signal="change_velocity" from="Type" to="." method="_change_velocity"]
[connection signal="area_entered" from="Type/SuckArea" to="Type" method="_on_SuckArea_area_entered"]
[connection signal="area_exited" from="Type/SuckArea" to="Type" method="_on_SuckArea_area_exited"]
